Hand over .todo/489 and .todo/675: widths per rung, the frozen #bf16 loader interface, where bf16 resumes
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01EYZ5gxzjRmr6SW3WweyS8D