@@ -243,6 +243,55 @@ the first number is taken:
    arm is the more bandwidth-bound of the two, so a co-tenant costs it more). "Held" or
    "missed" is not to be written on tok/s alone.
 
+## Handover, 2026-09-05 (this lane stopped here; one lane continues)
+
+**Widths as things stand, per rung.** Every rung above was measured at `-w f32` (the
+default): the checkpoint's BF16 / F16 tensors widened to `#f` as they are read, norms
+`#f`, activations `#f`. With `-w bf16` (`LLAMA2_WEIGHTS=bf16`; `examples/llama2/llama2.lisp`,
+develop `495c4a6b`) the plumbing is in place and VERIFIED AT F32 ONLY: every rank-2 tensor
+is asked from the reader at the weight width; every rank-1 tensor (norms, biases,
+`A_log`, `dt_bias`) is widened to `#f` by `as-f32-vector` as the reader hands it over;
+the embedding row is copied into a fresh `#f` vector (`embedding-row`; `linalg:row`
+declines bf16); Qwen3.5's query | gate split keeps the source width; the squeezed conv
+weight is `#f` (read element-wise); the KV cache, the recurrent states and every
+activation are `#f`. A `.bin` refuses `-w bf16` by message. On a safetensors or GGUF file
+`-w bf16` today stops at `checkpoint:make-tensor: BFLOAT16 is not a packed float element
+type` -- the reader has no `#bf16` destination yet, which is `.todo/675`'s remainder,
+NOT STARTED (the interface it must meet is written there).
+
+**Where the bf16 measurement resumes.** Once 675's remainder lands: compile `Llama` /
+`LlamaP` as the README says, run each rung with `-w f32` and `-w bf16` back to back in
+one quiet window (no other rontolisp lane; `RONTOLISP_THREADS=32` on the parallel rows,
+64 as a second row), 64 greedy tokens of the chat prompt, and for each arm record tok/s,
+GB/s (= tok/s x bytes per token: parameters x 4 at f32, x 2 at bf16) and Gelem/s (= tok/s
+x parameters), plus the load line. The rules in "The bf16 rungs (wave 2)" above apply
+unchanged; the reading is per model against its OWN f32 parallel bandwidth in the table
+above, and a bf16 activation seen anywhere is a defect. Check the `--add-modules
+jdk.incubator.vector` flag first if a cell is absurdly slow -- without it `java -jar`
+silently runs the scalar defuns. The chat prompt's ids are the reference library's now
+(the added-token fix), so chat rows are measurable; the raw "Once upon a time" rows are
+the `llama.cpp`-identical ones.
+
+**Load times after `.todo/690`** (which replaced the example's own byte-level JSON reader
+with `rontolisp:json-parse`): on the JVM the `tokenizer.json` + KV-cache figure is
+unchanged within noise (Qwen3.5 2.8 s against 2.6-3.0 s before; the byte reader had been
+the JVM's workaround for the same defect), and the interpreter leg, dead before, is 12.2 s
+for SmolLM2-135M. The load column in the README stands.
+
+**Left unfinished by this lane, all filed:** `.todo/675`'s remainder (the `#bf16`
+destination, interface below in 675); the bf16 rungs themselves (this item, wave 2);
+`.todo/697` (the `--parallel` default), `.todo/698` (`subseq` of an adjustable packed
+vector), `.todo/701` (the chat-template measurement, unowned), `.todo/703` (`make-array`
+on an unknown element type). Not filed, small: the README's TinyLlama table still shows
+the 2026-09-03 rows without a thread count (the re-measured ones are in this item); `-w
+bf16` on a wasm output has not been exercised (it should stop at `make-tensor`'s message
+the same way); `examples/llama2/checkpoint-tokenizer-check.lisp` covers the `:gpt2` kind
+only -- the Split-regex kinds are covered by the real checkpoints' id dumps recorded
+above, not by a fixture. Checkpoints under `/home/administrator/models/` (see above),
+`llama.cpp` with `llama-cli` and `llama-completion` at
+`/tmp/claude-1000/-home-administrator-rontolisp/2657f381-d6c4-4d97-93ab-c64450bd10ac/scratchpad/llama.cpp/build/bin/`
+(a `/tmp` path; rebuild takes three minutes if it is gone).
+
 ## What the numbers should look like
 
 Estimated, not measured -- the arithmetic is here so the first real run can be checked
